Сделаны почти вся домашка (нужно езще доделать заполнение ...PostgresRepository)

--- a/HairSalon/Api/appsettings.json
+++ b/HairSalon/Api/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "PostgresDB": "Host=PostgreU,.univ.priv; Port=5432; Database=quizdb; Userame=name;Password=postgres;" // указать тот же адрес сервера locallhost для дома, port, Database, username=postgres
+    // миграция -- перенос данных. В Infrastructure нужно скачать пакеты flueMigrator (33 million), npg (479 million)
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
