--- a/HairSalon/Api/appsettings.json
+++ b/HairSalon/Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "PostgresDB": "Host=PostgreU,.univ.priv; Port=5432; Database=quizdb; Userame=name;Password=postgres;" // указать тот же адрес сервера locallhost для дома, port, Database, username=postgres
+    "PostgresDB": "Host=localhost; Port=5432; Database=HairSalonDB; Userame=postgres;Password=123;" // указать тот же адрес сервера locallhost для дома, port, Database, username=postgres
     // миграция -- перенос данных. В Infrastructure нужно скачать пакеты flueMigrator (33 million), npg (479 million)
   },
   "Logging": {
