Правки по комментариям

--- a/HairSalon/Api/appsettings.json
+++ b/HairSalon/Api/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "PostgresDB": "Host=localhost; Port=5432; Database=HairSalonDB; Userame=postgres;Password=123;" // указать тот же адрес сервера locallhost для дома, port, Database, username=postgres
-    // миграция -- перенос данных. В Infrastructure нужно скачать пакеты flueMigrator (33 million), npg (479 million)
+    "PostgresDB": "Host=localhost; Port=5432; Database=HairSalonDB; Userame=postgres;Password=123;"
   },
   "Logging": {
     "LogLevel": {
