Изменения по комментариям

--- a/HairSalon/Api/appsettings.json
+++ b/HairSalon/Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "PostgresDB": "Host=localhost; Port=5432; Database=HairSalonDB; Userame=postgres;Password=123;"
+    "PostgresDB": "Host=localhost; Port=5432; Database=HairSalonDB; Username=postgres;Password=123;"
   },
   "Logging": {
     "LogLevel": {
