--- a/HairSalon/Api/appsettings.json
+++ b/HairSalon/Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "PostgresDB": "Host=localhost; Port=5432; Database=HairSalonDB; Username=postgres;Password=123;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
