Первая часть integration тестов (для AmenityService). Вылезает ошибка в _respawner

--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "PostgresDB": "Host=localhost; Port=5432; Database=HairSalonDB; Username=postgres;Password=123;"
+    "PostgresDB": "Host=localhost; Port=5432; Database=HairSalonDB; Username=postgres;Password=123;",
+    "PostgresDBIntegration": "Host=localhost; Port=5432; Database=HairSalonDB_integration; Username=postgres; Password=123;"
   },
   "Logging": {
     "LogLevel": {
