--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Build and Test
 
 on:
   push:
-    branches: [ HW-6 ]
+    branches: [ main ]
   pull_request:
     branches: [ main ]
 
@@ -51,7 +51,7 @@ jobs:
         run: dotnet tool install --global dotnet-reportgenerator-globaltool --version 5.1.25
 
       - name: Generate Coverage Report
-        run: reportgenerator -reports:"**/coverage.cobertura.xml" -targetdir:./coverage -reporttypes:HtmlInline;Cobertura;MarkdownSummary
+  run: reportgenerator -reports:"**/coverage.cobertura.xml" -targetdir:./coverage -reporttypes:"HtmlInline;Cobertura;MarkdownSummary"
 
       - name: Upload Coverage Report as Artifact
         uses: actions/upload-artifact@v4
