--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -85,5 +85,5 @@ jobs:
           set -e
           cd /home/user/app
           export COMPOSE_INTERACTIVE_NO_CLI=1
-          sudo docker compose pull hairsalon
-          sudo docker compose up -d hairsalon
+          sudo docker compose pull backend
+          sudo docker compose up -d backend
